# OsmAnd

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.MIT  AUTHORS.md  BUILDING.md  CONTRIBUTING.md  CREDITS  CREDITS.md  Changes Made to OSMAND Night Build 31Jan12 to Add Distance Measurements.doc  GPX.md  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE  OsmAndHms.jks  PULL_REQUEST.MIT.LICENSE  README.md  agconnect-services.json  build.gradle  diff_turn_lanes  gradle.properties  import-summary.txt  kb3swjz4.flm.txt  old-ndk-build.sh  settings.gradle  versions.gradle
OsmAnd-java/: .classpath  .gitignore  .project  Android.mk  CMakeLists.txt  build.gradle  build.xml  collect_legacy_libs.sh  collect_libs.sh  generate-swig.sh  jni.cmake  protobuf.patch  run_tests.sh  run_turn_lanes_test.sh  test_turn_lanes.json
OsmAnd-java/protobuf-src/: proto_generate.sh  protobuf-2.3.patch  protobuf-2.5.patch  protobuf-patch.sh
OsmAnd-java/src/com/google/openlocationcode/: OpenLocationCode.java
OsmAnd-java/src/com/google/protobuf/: AbstractMessage.java  AbstractMessageLite.java  ByteString.java  CodedInputStream.java  CodedInputStreamRAF.java  CodedOutputStream.java  DescriptorProtos.java  Descriptors.java  DynamicMessage.java  ExtensionRegistry.java  FieldSet.java  GeneratedMessage.java  Message.java  RpcUtil.java  TextFormat.java  UnknownFieldSet.java  WireFormat.java  WireFormat.java.rej
OsmAnd-java/src/com/googlecode/concurrentlinkedhashmap/: ConcurrentHashMapV8.java  ConcurrentLinkedHashMap.java  EntryWeigher.java  EvictionListener.java  LinkedDeque.java  Weigher.java  Weighers.java  package-info.java
OsmAnd-java/src/gnu/trove/: TLongCollection.java
OsmAnd-java/src/gnu/trove/function/: TIntFunction.java  TObjectFunction.java
OsmAnd-java/src/gnu/trove/impl/: Constants.java  PrimeFinder.java
OsmAnd-java/src/gnu/trove/iterator/: TAdvancingIterator.java  TByteIterator.java  TFloatIterator.java  TFloatObjectIterator.java  TIntIterator.java  TIntLongIterator.java  TIntObjectIterator.java  TIterator.java
OsmAnd-java/src/gnu/trove/list/: TLongList.java
OsmAnd-java/src/gnu/trove/map/: TIntByteMap.java  TIntObjectMap.java
OsmAnd-java/src/gnu/trove/procedure/: TFloatObjectProcedure.java  TIntLongProcedure.java  TIntObjectProcedure.java  TLongProcedure.java
OsmAnd-java/src/gnu/trove/set/: TFloatSet.java  TLongSet.java
OsmAnd-java/src/net/osmand/: Algoritms.java  Collator.java  CollatorStringMatcher.java  FloatMath.java  GeoidAltitudeCorrection.java  IProgress.java  IndexConstants.java  Location.java  LocationConvert.java  LogUtil.java  NativeLibrary.java  OsmAndCollator.java  PlatformUtil.java  RenderingContext.java  Reshaper.java  StringMatcher.java  SunriseSunset.java  TspAnt.java  TspTest.java
OsmAnd-java/src/net/osmand/activity/: GeoIntentActivityTest.java
OsmAnd-java/src/net/osmand/binary/: BinaryIndexPart.java  BinaryInspector.java  BinaryInspectorNative.java  BinaryMapAddressReaderAdapter.java  BinaryMapDataObject.java  BinaryMapIndexFilter.java  BinaryMapIndexReader.java  BinaryMapPoiReaderAdapter.java  BinaryMapRouteReaderAdapter.java  BinaryMapTransportReaderAdapter.java  BinaryVectorTileReader.java  CachedOsmandIndexes.java  CommonWords.java  GeocodingUtilities.java  MapZooms.java  OsmandIndex.java  OsmandOdb.java  RouteDataBorderLinePoint.java  RouteDataObject.java  VectorTile.java
OsmAnd-java/src/net/osmand/bridge/: CoreOsmAnd.java  CoreOsmAndJNI.java  ObfInspector.java  StringVector.java
OsmAnd-java/src/net/osmand/data/: Amenity.java  AmenityType.java  Building.java  City.java  DataTileManager.java  FavouritePoint.java  LatLon.java  LocationPoint.java  MapObject.java  MapObjectComparator.java  Postcode.java  QuadRect.java  QuadTree.java  RotatedTileBox.java  Street.java  TransportRoute.java  TransportStop.java
OsmAnd-java/src/net/osmand/map/: ITileSource.java  MapTileDownloader.java  OsmandRegions.java  RegionCountry.java  RegionRegistry.java  RegionsRegistryConverter.java  TileSourceManager.java  WorldRegion.java  countries.reginfo
OsmAnd-java/src/net/osmand/osm/: AbstractPoiType.java  MapPoiTypes.java  MapRenderingTypes.java  MapRoutingTypes.java  PoiCategory.java  PoiFilter.java  PoiType.java  rendering_types.xml
OsmAnd-java/src/net/osmand/plus/: CurrentPositionHelper.java  FavouritesDbHelper.java  OsmandSettings.java  PoiFiltersHelper.java  SearchByNameFilter.java  SpecialPhrases.java  TargetPointsHelper.java  Version.java
OsmAnd-java/src/net/osmand/render/: DefaultRenderingRulesStorage.java  High-detail-topo-v2.render.xml  High-detail-topo.render.xml  RenderingRule.java  RenderingRuleProperty.java  RenderingRuleSearchRequest.java  RenderingRuleStorageProperties.java  RenderingRulesStorage.java  RenderingRulesStoragePrinter.java  RenderingRulesTransformer.java  Touring-view_(more-contrast-and-details).render.xml  Winter-and-ski.render.xml  default.render.xml
OsmAnd-java/src/net/osmand/router/: .RouteResultPreparation.java.swp  BinaryRoutePlanner.java  BinaryRoutePlannerOld.java  GeneralRouter.java  NewGeneralRouter.java  PrecalculatedRouteDirection.java  RouteCalculationProgress.java  RoutePlannerFrontEnd.java  RouteResultPreparation.java  RouteSegmentResult.java  RoutingConfiguration.java  RoutingContext.java  TestRouting.java  TurnType.java  VehicleRouter.java  routing.xml
OsmAnd-java/src/net/osmand/search/: SearchUICore.java
OsmAnd-java/src/net/osmand/util/: Algorithms.java  GeoPointParserUtil.java  GeoPolylineParserUtil.java  LIFOBlockingDeque.java  MapAlgorithms.java  MapUtils.java  OpeningHoursParser.java  Pair.java
OsmAnd-java/src/test/resources/: .gitignore
OsmAnd-java/src/test/resources/search/: 100_bridge_street.json  bank_abcd.json  burger_king.json  carrer_de_vic.json  (+17 more)
OsmAnd-java/test-results/: TEST-net.osmand.router.RouteResultPreparationTest.xml  TEST-net.osmand.router.RouteTestingTest.xml  TEST-net.osmand.search.LocationSearchTest.xml  TEST-net.osmand.search.SearchCoreUITest.xml  TEST-net.osmand.util.GeoPolylineParserUtilTest.xml
OsmAnd-java/test/resources/: test_routing.json  test_turn_lanes.json
(+17602 files in other folders)
